<resources>
    <string name="app_name">EhgezMal3ab</string>
    <string name="signIn">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="fullName">Full name</string>
    <string name="fieldIsRequired">This field is required</string>
    <string name="shortPassword">The password must be eight characters or more</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="invalidNumber">Invalid number</string>
    <string name="playerRegisterURL">http:localhost</string>
    <string name="successfulRegistration">You have registered successfully</string>
    <string name="loggedIn">Logged In</string>
    <string name="incorrectUP">Incorrect username or password</string>
    <string name="noConnection">No internet connection</string>
    <string name="venues">Venues</string>
    <string name="reservations">Reservations</string>
    <string name="reservations_menu_cancel">Cancel</string>
    <string name="reservations_menu_share">Share Reservation</string>
    <string name="userProfile">Profile</string>
    <string name="friends">Friends</string>
    <string name="user_profile_toolbar">Profile</string>

    <string name="PREFERENCE_FILE_KEY">userName</string>
    <string name="invalidSlotSTring">Invalid slot</string>
    <string name="reserve">RESERVE</string>
    <string name="reserveErrorMessage">Invalid choice</string>
    <string name="successfulReservation">Your reservation has been placed successfully</string>
    <string name="unsuccessfulReservation">Something went wrong</string>
    <string name="reservations_menu_accept">Accept</string>
    <string name="reservations_menu_decline">Decline</string>
    <string name="reservationAccepted">Reservation accepted</string>
    <string name="error">Something went wrong</string>
    <string name="reservationDeclined">Reservation declined</string>
    <string name="totalPrice">Total Accepted Price</string>
    <string name="oldPassowrd">Old password</string>
    <string name="newPassowrd">New password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="changePassword">Change Password</string>
    <string name="passwordsDontMatch">Passwords don\'t match</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="totalReservationsPrice">Total reservations price</string>
    <string name="updateInfo">Update</string>
    <string name="noChangesDetected">No changes detected</string>
    <string name="updatedSuccessfully">Updated successfully</string>
    <string name="registerAsVenueAdmin">Become venue admin ?</string>
    <string name="reservations_menu_share_friend">Share with friend</string>
</resources>
