<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    >

    <EditText
        android:id="@+id/usernameText"
        android:theme="@style/InputStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="text"
        android:hint="@string/username"

        />

    <EditText
        android:id="@+id/passwordText"
        android:theme="@style/InputStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="text"
        android:hint="@string/password"
        />

    <EditText
        android:id="@+id/emailText"
        android:theme="@style/InputStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="text"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/numberText"
        android:theme="@style/InputStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="text"
        android:hint="@string/number"
        />


    <EditText
        android:id="@+id/fullNameText"
        android:theme="@style/InputStyle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:inputType="text"
        android:hint="@string/fullName"
        />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/register"
        android:background="@color/mainGreen"
        android:textColor="@color/white"

        />

    <TextView
        android:id="@+id/becomeVenAdminBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainGreenLight"
        android:text = "@string/registerAsVenueAdmin"
        android:clickable="true"
        />
</LinearLayout>

</ScrollView>