<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/oldPasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oldPassowrd"
        android:gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:password="true"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/newPasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newPassowrd"
        android:gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:password="true"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/confirmPasswordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassword"
        android:gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:password="true"/>

    <Button
        android:id="@+id/changePasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changePassword"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:background="@color/mainGreen"
        android:textColor="@color/white"/>


</LinearLayout>