<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/usernameText"
            android:theme="@style/InputStyle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:inputType="text"
            android:hint="@string/username"

            />

        <EditText
            android:id="@+id/passwordText"
            android:theme="@style/InputStyle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:inputType="text"
            android:hint="@string/password"
            />



        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signIn"
            android:background="@color/mainGreen"
            android:textColor="@color/white"

            />
    </LinearLayout>

</ScrollView>